# os-data-project

./: .gitignore  README.md  example_secrets.yml  pyproject.toml
docs/: api_notes.md
