[tool.poetry]
name = "os-data-project"
version = "0.1.0"
description = "open source data project"
authors = ["Alicia Bargar <aliciabargar@gmail.com>"]
readme = "README.md"
packages = [{include = "os_data_project"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
